<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="4dp"
    android:layout_marginStart="4dp"
    android:layout_marginEnd="4dp"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="10dp"
    app:cardElevation="5dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            android:textSize="14sp"
            android:inputType="number"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/edt_question"
            app:layout_constraintEnd_toStartOf="@id/btn_clearQuestion"
            android:id="@+id/edt_scoreQuestion"
            android:hint="@string/score"
            android:layout_margin="4dp"
            android:padding="10dp"
            android:gravity="center"
            android:background="@drawable/custom_edt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <ImageButton
            app:layout_constraintVertical_bias="0"
            android:id="@+id/btn_clearQuestion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_baseline_clear_24"
            android:contentDescription="@string/delete_question"
            app:layout_constraintBottom_toTopOf="@id/edt_question"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/edt_scoreQuestion"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/edt_question"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:hint="@string/question"
            app:layout_constraintBottom_toTopOf="@id/img_question"
            app:layout_constraintEnd_toStartOf="@id/btn_selectPicture"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edt_scoreQuestion"
            app:layout_constraintVertical_bias="0"
            app:layout_constraintVertical_chainStyle="packed" />

        <ImageButton
            android:background="@drawable/ic_baseline_image_24"
            android:backgroundTint="@color/dark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:id="@+id/btn_selectPicture"
            app:layout_constraintStart_toEndOf="@id/edt_question"
            app:layout_constraintTop_toBottomOf="@id/btn_clearQuestion"
            app:layout_constraintBottom_toTopOf="@id/img_question"
            app:layout_constraintEnd_toEndOf="parent"/>
        <ImageView
            android:id="@+id/img_question"
            app:layout_constraintTop_toBottomOf="@id/edt_question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_baseline_clear_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/recyclerView_multiple_choice"
            android:visibility="gone"/>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView_multiple_choice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:padding="4dp"
            android:nestedScrollingEnabled="false"
            app:layout_constraintBottom_toTopOf="@id/tv_correct"
            app:layout_constraintTop_toBottomOf="@id/img_question"
            tools:layout_editor_absoluteX="4dp" />
        <TextView
            app:layout_constraintHorizontal_bias="0"
            android:layout_margin="4dp"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintTop_toBottomOf="@id/recyclerView_multiple_choice"
            android:id="@+id/tv_correct"
            android:textColor="@color/dark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/correctAnswer"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/tv_correctAnswer"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/tv_correctAnswer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="4dp"
            android:gravity="center"
            android:hint="@string/correctAnswer"
            android:padding="4dp"
            android:textSize="18sp"
            android:textColor="@color/green"
            app:layout_constraintBottom_toTopOf="@id/edt_response"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"

            app:layout_constraintTop_toBottomOf="@id/tv_correct" />

        <EditText
            android:inputType="textFilter|textMultiLine"
            android:padding="20dp"
            android:layout_marginTop="4dp"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/explain"
            android:textColor="@color/dark"
            android:background="@drawable/custom_edt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/edt_response"
            app:layout_constraintTop_toBottomOf="@id/tv_correctAnswer"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btn_addAnswer"
            app:layout_constraintBottom_toBottomOf="@id/bottom_color"/>
        <ImageButton
            app:layout_constraintTop_toBottomOf="@id/tv_correctAnswer"
            android:layout_width="40dp"
            android:id="@+id/btn_addAnswer"
            android:background="@drawable/ic_add_answer"
            android:backgroundTint="@color/dark"
            android:contentDescription="@string/add_answer"
            android:layout_height="40dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/bottom_color"
            app:layout_constraintStart_toEndOf="@id/edt_response"/>
        <RelativeLayout
            android:id="@+id/bottom_color"
            android:layout_width="match_parent"
            android:layout_height="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@color/green"
            app:layout_constraintStart_toStartOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>