<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateTestActivity"
    android:fitsSystemWindows="true"
    android:id="@+id/container_createTest">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.appcompat.widget.Toolbar
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/toolbar_createTest"
        app:titleTextColor="@color/white"
        app:menu="@menu/menu_create_test"
        android:background="@color/green"
        app:layout_constraintBottom_toTopOf="@id/nested_container"/>
        <androidx.core.widget.NestedScrollView
            android:id="@+id/nested_container"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar_createTest"
            android:layout_width="match_parent"
            android:layout_height="0dp">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <EditText
                    android:layout_margin="4dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:paddingStart="15dp"
                    android:paddingEnd="10dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/custom_edt"
                    app:layout_constraintBottom_toTopOf="@id/edt_topic"
                    android:hint="@string/nameTest"
                    android:id="@+id/edt_name"/>
                <EditText
                    android:layout_margin="4dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:paddingStart="15dp"
                    android:paddingEnd="10dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/edt_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/custom_edt"
                    app:layout_constraintBottom_toTopOf="@id/edt_description"
                    android:hint="@string/inputTopicCourse"
                    android:id="@+id/edt_topic"/>
                <EditText
                    android:layout_margin="4dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:paddingStart="15dp"
                    android:paddingEnd="10dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/edt_topic"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/custom_edt"
                    android:hint="@string/description"
                    android:id="@+id/edt_description"
                    app:layout_constraintBottom_toTopOf="@id/edt_timer"/>
                <ImageView
                    app:layout_constraintHorizontal_chainStyle="packed"
                    app:layout_constraintTop_toBottomOf="@id/edt_description"
                    app:layout_constraintStart_toStartOf="parent"
                    android:id="@+id/img_time"
                    android:background="@drawable/ic_baseline_timer_24"
                    android:layout_width="wrap_content"
                    android:backgroundTint="@color/dark"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="5dp"
                    app:layout_constraintEnd_toStartOf="@id/edt_timer"
                    app:layout_constraintBottom_toTopOf="@id/recyclerView_createTest"/>
                <EditText
                    android:id="@+id/edt_timer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="Thời gian"
                    android:textSize="16sp"
                    android:inputType="number"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    app:layout_constraintStart_toEndOf="@id/img_time"
                    app:layout_constraintEnd_toStartOf="@id/tv_time"
                    android:background="@drawable/custom_edt"
                    android:padding="15dp"
                    android:gravity="center_horizontal"
                    app:layout_constraintBottom_toTopOf="@id/recyclerView_createTest"
                    app:layout_constraintTop_toBottomOf="@id/edt_description"
                    />
                <TextView
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="5dp"
                    android:id="@+id/tv_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/time"
                    app:layout_constraintStart_toEndOf="@id/edt_timer"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/edt_description"
                    app:layout_constraintBottom_toTopOf="@id/recyclerView_createTest"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerView_createTest"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:padding="4dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/edt_timer" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/fab_addQuestion"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_margin="16dp"
        android:src="@drawable/ic_add"
        android:backgroundTint="@color/white"
        app:fabSize="mini"
        android:elevation="5dp"
        app:rippleColor="@color/borderColor"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>